# paper-helper

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirement.txt
static/: func.js
templates/: index.html
utils/: arxiv_parser.py  arxiv_search.py  pdf_section_parser.py
